# pathfinder

./: .gitignore  README.md  bcy_json_runner.py  bcy_runner.py  pyproject.toml  run_bcy.py  run_dbr.py  write_bcy.py
_data_sync/: event_39_03.asset  event_story__prefix_list.txt  kanade_audio_id_list.txt  sekai_voice_prefix_list.txt
notebooks/: sekai_sort_gatchas.ipynb
pathfinder/: README.md  dribble-scrape.ipynb
pathfinder/bcy/: __init__.py  bcy_api.py  bcy_json_parser.py  bcy_writer.py
pathfinder/danbooru/: __init__.py  dbr_artist_finder.py  dbr_get_meta.py
pathfinder/lambda/: lambda_lab.py
pathfinder/sekai/: README.md  _legacy_methods.py  extract_sekai.py  sekai_driver.py  sekai_event_parser.py  sekai_explore.py  sekai_extract.py  sekai_extractor.py  sekai_prefix_gen.py  sekai_trim_songs.py
pathfinder/sekai/story/: sekai_trim_songs.py
pathfinder/utils/: file_downloader.py
scripts/: bcy_runner.py  debug.py  extract_twitter_ids_from_html.py  find_exist_files.py  gdl_dev.ipynb  sekai_copy_audio.ipynb  try_parse.py  try_selenium.py
utils/: .gitignore  data_loader.py  logger.py  sdtools.py
