[tool.poetry]
name = "pathfinder"
version = "0.1.0"
description = "pathfinder is a tool that finds where to scrape"
authors = ["yada <trojblue@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.10.0"
requests = "^2.31.0"
tenacity = "^8.2.2"
fire = "^0.5.0"
orjson = "^3.9.1"
tqdm = "^4.65.0"
polars = "^0.18.2"
pandas = "^2.0.2"
pyarrow = "^12.0.0"
aiohttp = "^3.8.4"
unibox = {url = "https://files.pythonhosted.org/packages/40/b9/d08300b70094eb0dfbf418444784997fd690e643ec10cd895f9ccf8e6249/unibox-0.2.13-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
